--- a/laf/static/styles/style.css
+++ b/laf/static/styles/style.css
@@ -1,4 +1,3 @@
-{% loadstatic %}
 /*  import google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
@@ -96,18 +95,13 @@ section .title::after{
     align-items: center;
     justify-content: space-between;
 }
-.navbar .logo a{
-    color: rgb(219, 114, 135);
+
+.navbar .logo a {
+    color: rgb(255 210 210);
     font-size: 35px;
     font-weight: 600;
 }
-.navbar .logo a span{
-    color: crimson;
-    transition: all 0.3s ease;
-}
-.navbar.sticky .logo a span{
-    color: #fff;
-}
+
 .navbar .menu li{
     list-style: none;
     display: inline-block;
@@ -195,7 +189,6 @@ section .title::after{
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
     color: #fff;
     font-size: 25px;
     padding: 0px;
@@ -206,7 +199,6 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
     background: none;
 }
 .home .home-content button {
@@ -451,6 +443,36 @@ section .title::after{
     background: none;
 }
 
+.button1{
+  background-color: rgb(255, 255, 255);
+  border: solid;
+  border-color: crimson;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.button1:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+.btns{
+    display: flex;
+    flex-direction: row;
+}
+
+.btns .button1 a{
+    color: #111;
+}
+
+  
+
+
 /* footer section styling */
 footer{
     background: #111;
@@ -524,7 +546,7 @@ footer span a:hover{
     }
     .home .home-content a{
         font-size: 23px;
-        padding: 10px 30px;
+       
     }
     .max-width{
         max-width: 930px;
